glx/testdata/valid/archive-small-family.glx
# Valid multi-entity archive: Small family with complete relationships
persons:
  person-john-smith:
    concluded_identity:
      primary_name: "John Smith"
      gender: "male"
      birth_date: "1850-01-15"
      death_date: "1920-06-20"
  
  person-mary-brown:
    concluded_identity:
      primary_name: "Mary Brown"
      gender: "female"
      birth_date: "1852-03-20"

  person-jane-smith:
    concluded_identity:
      primary_name: "Jane Smith"
      gender: "female"
      birth_date: "1875-08-10"

relationships:
  rel-marriage-john-mary:
    type: "marriage"
    persons:
      - person-john-smith
      - person-mary-brown
  
  rel-parent-child-jane:
    type: "parent-child"
    persons:
      - person-john-smith
      - person-mary-brown
      - person-jane-smith

events:
  event-john-birth:
    type: "birth"
    date: "1850-01-15"
    place: place-leeds
    participants:
      - person: person-john-smith
        role: "principal"

  event-marriage:
    type: "marriage"
    date: "1870-06-15"
    place: place-leeds
    participants:
      - person: person-john-smith
        role: "groom"
      - person: person-mary-brown
        role: "bride"

places:
  place-leeds:
    name: "Leeds"
    type: "city"
    parent: place-yorkshire
  
  place-yorkshire:
    name: "Yorkshire"
    type: "county"
    parent: place-england
  
  place-england:
    name: "England"
    type: "country"

sources:
  source-parish-register:
    title: "St Paul's Parish Register, Leeds"
    repository: repository-leeds-library

repositories:
  repository-leeds-library:
    name: "Leeds Library Local Studies"
    type: "library"

citations:
  citation-john-birth:
    source: source-parish-register
    locator: "Birth entry 145, page 23"
    quality: 3

assertions:
  assertion-john-birthdate:
    subject: person-john-smith
    claim: "Birth date is January 15, 1850"
    citations:
      - citation-john-birth
    confidence: "high"

