glx/testdata/invalid/archive-broken-references.glx
# Invalid: Multiple broken cross-references in multi-entity archive
persons:
  person-john-smith:
    version: "1.0"
    concluded_identity:
      primary_name: "John Smith"
  
  person-mary-brown:
    version: "1.0"
    concluded_identity:
      primary_name: "Mary Brown"

relationships:
  rel-marriage:
    version: "1.0"
    type: "marriage"
    persons:
      - person-john-smith
      - person-nonexistent  # ERROR: References non-existent person

events:
  event-john-birth:
    version: "1.0"
    type: "birth"
    place: place-nonexistent  # ERROR: References non-existent place
    participants:
      - person: person-another-nonexistent  # ERROR: References non-existent person
        role: "principal"

citations:
  citation-birth:
    version: "1.0"
    source: source-nonexistent  # ERROR: References non-existent source
    locator: "Page 23"

assertions:
  assertion-birth:
    version: "1.0"
    subject: person-yet-another-nonexistent  # ERROR: References non-existent entity
    claim: "Birth date is 1850-01-15"
    citations:
      - citation-nonexistent  # ERROR: References non-existent citation

